crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT010.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- - kind:
      name: PytestRaisesWithoutException
      body: "set the expected exception in `pytest.raises()`"
      suggestion: ~
      fixable: false
    location:
      row: 5
      column: 9
    end_location:
      row: 5
      column: 22
    fix: ~
    parent: ~

