crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT011_replace_broad_exceptions.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    name: RaisesTooBroad
    body: "`pytest.raises(ZeroDivisionError)` is too broad, set the `match` parameter or use a more specific exception"
    commit: ~
    fixable: false
  location:
    row: 12
    column: 23
  end_location:
    row: 12
    column: 40
  fix: ~
  parent: ~

