crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT013.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- - kind:
      name: PytestIncorrectPytestImport
      body: "Found incorrect import of pytest, use simple `import pytest` instead"
      suggestion: ~
      fixable: false
    location:
      row: 11
      column: 0
    end_location:
      row: 11
      column: 27
    fix: ~
    parent: ~
  - kind:
      name: PytestIncorrectPytestImport
      body: "Found incorrect import of pytest, use simple `import pytest` instead"
      suggestion: ~
      fixable: false
    location:
      row: 12
      column: 0
    end_location:
      row: 12
      column: 26
    fix: ~
    parent: ~
  - kind:
      name: PytestIncorrectPytestImport
      body: "Found incorrect import of pytest, use simple `import pytest` instead"
      suggestion: ~
      fixable: false
    location:
      row: 13
      column: 0
    end_location:
      row: 13
      column: 40
    fix: ~
    parent: ~

