crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT016.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    name: FailWithoutMessage
    body: "No message passed to `pytest.fail()`"
    commit: ~
    fixable: false
  location:
    row: 13
    column: 4
  end_location:
    row: 13
    column: 15
  fix: ~
  parent: ~
- kind:
    name: FailWithoutMessage
    body: "No message passed to `pytest.fail()`"
    commit: ~
    fixable: false
  location:
    row: 14
    column: 4
  end_location:
    row: 14
    column: 15
  fix: ~
  parent: ~
- kind:
    name: FailWithoutMessage
    body: "No message passed to `pytest.fail()`"
    commit: ~
    fixable: false
  location:
    row: 15
    column: 4
  end_location:
    row: 15
    column: 15
  fix: ~
  parent: ~
- kind:
    name: FailWithoutMessage
    body: "No message passed to `pytest.fail()`"
    commit: ~
    fixable: false
  location:
    row: 16
    column: 4
  end_location:
    row: 16
    column: 15
  fix: ~
  parent: ~
- kind:
    name: FailWithoutMessage
    body: "No message passed to `pytest.fail()`"
    commit: ~
    fixable: false
  location:
    row: 17
    column: 4
  end_location:
    row: 17
    column: 15
  fix: ~
  parent: ~

