crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT020.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- - kind:
      name: PytestDeprecatedYieldFixture
      body: "`@pytest.yield_fixture` is deprecated, use `@pytest.fixture`"
      suggestion: ~
      fixable: false
    location:
      row: 14
      column: 1
    end_location:
      row: 14
      column: 23
    fix: ~
    parent: ~
  - kind:
      name: PytestDeprecatedYieldFixture
      body: "`@pytest.yield_fixture` is deprecated, use `@pytest.fixture`"
      suggestion: ~
      fixable: false
    location:
      row: 19
      column: 1
    end_location:
      row: 19
      column: 21
    fix: ~
    parent: ~

